...
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent="0.7"
                android:minHeight="0dp">

                <!--  Game button - green with round corners and black outline -->
                <Button
                    android:id="@+id/ui_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/new_random_game"
                    android:contentDescription="@string/new_random_game_a11y"
                    android:drawablePadding="12dp"
                    android:padding="10.8dp"
...
                    android:elevation="8dp"
                    android:minHeight="0dp"
                    android:gravity="center_vertical" />
                    
                <!-- Load Game button - red with round corners and black outline -->
                <Button
                    android:id="@+id/load_game_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/load_game"
                    android:contentDescription="@string/load_game_a11y"
                    android:drawableStart="@drawable/ic_load_game_scaled_large"
                    android:drawablePadding="12dp"
...
